web-infras/parser/tests/fixtures/babel/es2015/class/invalid-escape-static/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,23)
1|class X { st\u0061tic y() {} }
 |                     ^
